tests/snapshots/formats__wkt-crs__utm33n.prj.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ utm33n.prj — WKT CRS: PROJCS "WGS_1984_UTM_Zone_33N"  [0x0+0x191]
  ▾ PROJCS: "WGS_1984_UTM_Zone_33N"  [0x0+0x191]
    ▾ GEOGCS: "GCS_WGS_1984"  [0x1f+0x91]
      ▾ DATUM: "D_WGS_1984"  [0x35+0x40]
        ▾ SPHEROID: "WGS_1984"  [0x48+0x2c]
            Value: 6378137  [0x5c+0x9]
            Value: 298.257223563  [0x66+0xd]
      ▾ PRIMEM: "Greenwich"  [0x76+0x17]
          Value: 0  [0x89+0x3]
      ▾ UNIT: "Degree"  [0x8e+0x21]
          Value: 0.0174532925199433  [0x9c+0x12]
      PROJECTION: "Transverse_Mercator"  [0xb1+0x21]
    ▾ PARAMETER: "False_Easting"  [0xd3+0x23]
        Value: 500000  [0xed+0x8]
    ▾ PARAMETER: "False_Northing"  [0xf7+0x1f]
        Value: 0  [0x112+0x3]
    ▾ PARAMETER: "Central_Meridian"  [0x117+0x22]
        Value: 15  [0x134+0x4]
    ▾ PARAMETER: "Scale_Factor"  [0x13a+0x20]
        Value: 0.9996  [0x153+0x6]
    ▾ PARAMETER: "Latitude_Of_Origin"  [0x15b+0x23]
        Value: 0  [0x17a+0x3]
    ▾ UNIT: "Meter"  [0x17f+0x11]
        Value: 1  [0x18c+0x3]
