tests/snapshots/formats__wkt-crs__wgs84.wkt.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ wgs84.wkt — WKT CRS: GEOGCRS "WGS 84"  [0x0+0x191]
  ▾ GEOGCRS: "WGS 84"  [0x0+0x190]
    ▾ DATUM: "World Geodetic System 1984"  [0x16+0x79]
      ▾ ELLIPSOID: "WGS 84"  [0x42+0x4c]
          Value: 6378137  [0x55+0x7]
          Value: 298.257223563  [0x5d+0xd]
        ▾ LENGTHUNIT: "metre"  [0x78+0x15]
            Value: 1  [0x8b+0x1]
    ▾ CS  [0x95+0x11]
        Value: "ellipsoidal"  [0x98+0xb]
        Value: 2  [0xa4+0x1]
    ▾ AXIS: "latitude"  [0xb0+0x60]
        Value: "north"  [0xc0+0x5]
      ▾ ORDER  [0xd3+0x8]
          Value: 1  [0xd9+0x1]
      ▾ ANGLEUNIT: "degree"  [0xe9+0x26]
          Value: 0.0174532925199433  [0xfc+0x12]
    ▾ AXIS: "longitude"  [0x11a+0x60]
        Value: "east"  [0x12b+0x4]
      ▾ ORDER  [0x13d+0x8]
          Value: 2  [0x143+0x1]
      ▾ ANGLEUNIT: "degree"  [0x153+0x26]
          Value: 0.0174532925199433  [0x166+0x12]
    ▾ ID: "EPSG"  [0x180+0xf]
        Value: 4326  [0x18a+0x4]
